--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   image_picker: ^1.0.7
   intl: ^0.19.0
+  timeago: ^3.6.1
 
 
 dev_dependencies:
