--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   intl: ^0.19.0
   timeago: ^3.6.1
   smooth_page_indicator: ^1.1.0
+  shared_preferences: ^2.2.2
+  confetti: ^0.8.0
 
 
 dev_dependencies:
